/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package com.dremio.search;

option java_package = "com.dremio.service.search";
option java_outer_classname = "SearchDocumentIdProto";

// Fields that identify search document. The search provider may
// or may not support long ids like paths. Implementation converts this
// structure to a unique id for identifying documents in the index.
message SearchDocumentId {
  // Optional context fields pertinent to all document types.
  map<string, string> context = 1;

  // Catalog object path in dot notation.
  repeated string path = 2;
}
