/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package com.dremio.search;

import "search-document.proto";
import "search-document-id.proto";

option java_package = "com.dremio.service.search";
option java_outer_classname = "SearchDocumentMessageProto";

// Pubsub message posted to pubsub infra to update search document in the index.
message SearchDocumentMessage {
  enum SearchDocumentEventType {
    SEARCH_DOCUMENT_EVENT_TYPE_UNSPECIFIED = 0;

    SEARCH_DOCUMENT_EVENT_TYPE_CREATED = 1;

    SEARCH_DOCUMENT_EVENT_TYPE_UPDATED = 2;

    SEARCH_DOCUMENT_EVENT_TYPE_DELETED = 3;
  }

  SearchDocumentId document_id = 1;

  SearchDocumentEventType event_type = 2;

  SearchDocument document = 3;
}
